--- a/src/input.css
+++ b/src/input.css
@@ -1,25 +1,12 @@
+
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-.header{
-    background-color: blue;
-    width: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-
-}
-
-.navbar{
-    max-width: 1024px;
-    background-color: #0f004a;
-    margin: auto;
-    height: 56px;
-    color: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    
+@layer {
+    body {
+        @apply text-whiteColor bg-primaryColor tracking-wider font-dmsans  ; 
+    }
 }
